--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,26 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>My Classifier</title>
-        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-        </script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1">
+    <meta name="mobile-web-app-capable" content="yes">
 
-        <script src="{{ url_for('static', filename='js/javascript.js') }}"></script>
-    </head>
-    <body>
-        <h1>My Classifier</h1>
-        <div class="container">
-            <form  id="formId" enctype="multipart/form-data">
-                <input type="file" class="inputFile" name="file" id="fileId" accept="image/*">
-                <div class ="upload-button">
-                    <label id="labelId" for="file" >Choose a file</label>
-                </div>
-                <input type="submit" value="Predict Pic" id="predict"/>
-            </form>
-            <div id="result">
-                <h3>Result</h3>
-                <p>Result here</p>
-            </div>
-        </div>
-    </body>
+    <title>WebCamera</title>
+
+    <link rel="icon" sizes="192x192" href="images/icon.png">
+    <!-- <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css"> -->
+    <link rel="stylesheet" href="../static/css/main.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+</head>
+
+<body>
+<div>
+	<video playsinline autoplay="true" id="camera"></video>
+	<canvas id="videoCanvas"></canvas>
+	<p id="result"></p>
+</div>
+
+</body>
 </html>
