--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
 <div>
 	<video playsinline autoplay="true" id="camera"></video>
 	<canvas id="videoCanvas"></canvas>
-	<p id="result"></p>
 </div>
+	<canvas id="sem_canvas" width="20vw" height="20vw" ></canvas>
 
 </body>
 </html>
