--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,7 @@
 
     <title>WebCamera</title>
 
-    <link rel="icon" sizes="192x192" href="./images/icon.png">
-    <!-- <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css"> -->
+    <link rel="icon" type="image/png" href="../static/images/icon.png" sizes="192x192" />
     <link rel="stylesheet" href="../static/css/main.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
