--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,3 +32,59 @@ video {
   width: var(--width);
   height: calc(var(--width) * 0.75);
 }
+
+form {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.value-button {
+  display: inline-block;
+  border: 1px solid #ddd;
+  margin: 0px;
+  width: 40px;
+  height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  padding: 11px 0;
+  background: #eee;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.value-button:hover {
+  cursor: pointer;
+}
+
+form #decreasePoints #decreaseSem {
+  margin-right: -4px;
+  border-radius: 8px 0 0 8px;
+}
+
+form #increasePoints #increaseSem {
+  margin-left: -4px;
+  border-radius: 0 8px 8px 0;
+}
+
+input#SEM_AVG #POINTS_AVG {
+  text-align: center;
+  border: none;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  margin: 0px;
+  width: 40px;
+  height: 20px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
