--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 		<div class="value-button" id="increaseSem">+</div>
 	</form>
 	<form>
-		<label for="POINTS_AVG">Numero di campioni utilizzati per le striscie:</label><br>
+		<label for="POINTS_AVG">Numero di campioni utilizzati per le strisce:</label><br>
 		<div class="value-button" id="decreasePoints">-</div>
 			<input readonly type="number" id="POINTS_AVG" value="2" />
 		<div class="value-button" id="increasePoints">+</div>
